syntax = "proto3";

package stats.service.collector;

import "google/protobuf/empty.proto";
import "stats/messages/user_action.proto";

option java_package = "ru.yandex.practicum.grpc.stats.collector";


service UserActionController {
  rpc CollectUserAction (message.event.UserActionProto)
      returns (google.protobuf.Empty);
}